--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,11 @@
     "axios": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.4",
     "react-router-dom": "^6.4.5",
-    "react-toastify": "^9.1.1"
+    "react-syntax-highlighter": "^15.5.0",
+    "react-toastify": "^9.1.1",
+    "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
